MS7 abstract submitted

--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -1,10 +1,49 @@
 @comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
+@incollection{paolo00simulationmodelsasopaquethoughtexperiments,
+	abstract = {@InCollection{ paolo00simulationmodelsasopaquethoughtexperiments, author = "Ezequiel A. Di Paolo and Jason Noble and Seth Bullock", title = "Simulation Models as Opaque Thought Experiments", year = "2000", journal = "Artificial Life", year1 = "2002", month = "Winter", volume = "7", number = "1", pages = "497--506", abstract = {We review and critique a range of perspectives on the scientific role of individual-based evolutionary simulation models as they are used within artificial life. We find that such models have the potential to enrich existing modelling enterprises through their strength in modelling systems of interacting entities. Furthermore, simulation techniques promise to provide theoreticians in various fields with entirely new conceptual, as well as methodological, approaches. However, the precise manner in which simulations can be used as models is not clear. We present two apparently opposed perspectives on this issue: simulation models as \" emergent computational thought experiments\" and simulation models as realistic simulacra. Through analysing the role that armchair thought experiments play in science, we develop a role for simulation models as opaque thought experiments, that is, thought experiments in which the consequences follow from the premises, but in a non-obvious m...} }},
+	author = "Paolo, Ezequiel A. Di and Noble, Jason and Bullock, Seth",
+	booktitle = "{Seventh International Conference on Artificial Life}",
+	editor = "Bedau, Mark A. and McCaskill, John S. and Packard, Norman and Rasmussen, Steen",
+	pages = "497--506",
+	publisher = "MIT Press, Cambridge, MA",
+	title = "{Simulation models as opaque thought experiments}",
+	url = "http://eprints.soton.ac.uk/261455",
+	year = "2000"
+}
+
 @book{vives2001oligopoly,
 	author = "Vives, Xavier",
 	publisher = "MIT press",
 	title = "{Oligopoly pricing: old ideas and new tools}",
 	year = "2001"
+}
+
+@article{winsberg09taletwomethods,
+	abstract = "Simulations (both digital and analog) and experiments share many features. But what essential features distinguish them? I discuss two proposals in the literature. On one proposal, experiments investigate nature directly, while simulations merely investigate models. On another proposal, simulations differ from experiments in that simulationists manipulate objects that bear only a formal (rather than material) similarity to the targets of their investigations. Both of these proposals are rejected. I argue that simulations fundamentally differ from experiments with regard to the background knowledge that is invoked to argue for the \textquotedblleft{}external validity\textquotedblright of the investigation.",
+	author = "Winsberg, Eric",
+	journal = "Synthese",
+	localfile = "/home/scarrign/Documents/biblio/pdfs/winsberg09taletwomethods.pdf",
+	number = "3",
+	pages = "575--592",
+	title = "{A Tale of Two Methods}",
+	volume = "169",
+	year = "2009"
+}
+
+@incollection{bedau98philosophicalcontentmethodartificiallife,
+	abstract = "The field of artificial life is enriching both the content and method of philosophy. One example of the impact of artificial life on the content of philosophy is the light it sheds on the perennial philosophical question of the nature of emergent pheonomena in general. Another second example is the way it highlights and promises to explain the suppleness of mental processes. Artificial life's computational thought experiments also provide philosophy with a methodological innovation. The limitations of the central arguments in Stephen Jay Gould's Wonderful Life and Daniel Dennett's Darwin's Dangerous Idea illustrate the value of this new method.",
+	address = "Oxford",
+	author = "Bedau, Mark A.",
+	booktitle = "{The Digital Phoenix: How Computers are Changing Philosophy}",
+	citeulike-article-id = "2684478",
+	editor = "Bynum, T. W. and Moor, J. H.",
+	pages = "135--152",
+	posted-at = "2008-04-18 01:27:45",
+	priority = "2",
+	publisher = "Basil Blackwell",
+	title = "{Philosophical Content and Method of Artificial Life}",
+	year = "1998"
 }
 
 @article{lomnicki1978individualdifferencesbetweenanimalsandthenaturalregulationoftheirnumbers,
@@ -87,16 +126,6 @@
 	title = "{Cultural Evolution: A Review of Theory, Findings and Controversies}",
 	url = "http://dx.doi.org/10.1007/s11692-015-9320-0",
 	year = "2015"
-}
-
-@incollection{beatty1995theevolutionarycontingencythesis,
-	author = "Beatty, John",
-	booktitle = "{Concepts, theories, and rationality in the biological sciences}",
-	journal = "Concepts, theories, and rationality in the biological sciences",
-	pages = "45--81",
-	publisher = "University of Pittsburgh Press Pittsburgh",
-	title = "{The evolutionary contingency thesis}",
-	year = "1995"
 }
 
 @article{phan2010agentbasedmodelsandsimulationsineconomicsandsocialsciencesfromconceptualexplorationtodistinctwaysofexperimenting,
@@ -251,6 +280,20 @@
 	url = "http://www.sciencedirect.com/science/article/pii/S1090513813000056",
 	volume = "34",
 	year = "2013"
+}
+
+@book{gould1989wonderfullife,
+	author = "Gould, Stephen Jay",
+	catalogue-url = "http://nla.gov.au/nla.cat-vn179487",
+	isbn = "0393027058 039330700",
+	language = "English",
+	life-dates = "1989 -",
+	pages = "347 p. :",
+	publisher = "W.W. Norton, New York :",
+	subjects = "Invertebrates, Fossil - British Columbia - Yoho National Park.; Paleontology - British Columbia - Yoho National Park - Cambrian.; Paleontology - Philosophy.; Contingency (Philosophy); Contingency (Philosophy); Burgess Shale (B.C.); Yoho National Park (B.C.)",
+	title = "{Wonderful life : the Burgess Shale and the nature of history}",
+	type = "Book",
+	year = "1989"
 }
 
 @article{rubinstein1985equilibriuminamarketwithsequentialbargaining,
@@ -1279,5 +1322,29 @@
 	url = "http://www.pnas.org/content/104/17/7301.abstract",
 	volume = "104",
 	year = "2007"
+}
+
+@article{beatty1995evolutionary,
+	author = "Beatty, John",
+	journal = "Concepts, theories, and rationality in the biological sciences",
+	pages = "45--81",
+	publisher = "University of Pittsburgh Press Pittsburgh",
+	title = "{The evolutionary contingency thesis}",
+	year = "1995"
+}
+
+@article{madella2014,
+	author = "Madella, Marco and Rondelli, Bernardo and Lancelotti, Carla and Balbo, Andrea and Zurro, Debora and Campillo, XaviRubio and Stride, Sebastian",
+	doi = "10.1007/s10816-014-9209-8",
+	issn = "1072-5369",
+	journal = "Journal of Archaeological Method and Theory",
+	keywords = "Modelling; Simulation; Archaeology; Human behaviour",
+	language = "English",
+	number = "2",
+	pages = "251--257",
+	publisher = "Springer US",
+	title = "{Introduction to Simulating the Past}",
+	url = "http://dx.doi.org/10.1007/s10816-014-9209-8",
+	volume = "21"
 }
 
