--- a/doc/conferences/201605_MS7/abstract-V-sim.tex
+++ b/doc/conferences/201605_MS7/abstract-V-sim.tex
@@ -1,64 +1,46 @@
 \documentclass[a4paper]{article}
 
-%%\title{Abstract MS7:\\ Transdisciplinarity : an ideal framework to develop and use computer simulation as a heuristic tool to understand the past, the example of EPNEt.}
+
 \title{Abstract MS7:\\ Computer modelling and simulation as heuristic tool to understand the past: the case of the EPNEt project.}
-\author{Simon Carrignon, Alessandro Mosca, and Bernardo Rondelli}
+\author{Simon Carrignon, Alessandro Mosca, Bernardo Rondelli and Jos\'{e} Remesal}
 \date{October 2015}
 
 
 \begin{document}
-\maketitle 
+ 
 
 
 \section{Introducion}
-To understand the social mechanisms behind the archaeological and historical artifacts we findin our libraries and in the archaeological sites we excavate is somehow tricky. It relies mostly on biased and sparse hints, and most of the knowledge of such mechanisms has to be inferred from indirect data sometime very far from the original social or cognitive process that originated it.
 
-In this paper, we argue that \emph{formal modelling} and computer simulation are valuable tools to overcome such obstacles. To sustain our argument, we show that most of the problems encountered are close to the ones that evolutionary biologists encompass when they try to reconstruct the history of living beings. We show how biologists faced that by embracing mathematical and computer modelling, and we argue that, at the informal level, the inferences they do are not very different to the \emph{narrative descriptions} usually made by historians.
+Due to the incompleteness and uncertainty of the historical and archaeological record generates most of the historical interpretation has to be inferred from indirect data sometime very far from the original social or cognitive process that originated it (Madella et al., 2014).
 
-Moreover, we  generalise this view by defending the use of computer modelling as a powerful heuristic tool in life science in general and we finish by introducing an interdisciplinary research setting where such an approach has been implemented, also saying that it has provided so far a innovative environment where formal modelling and computer simulation concretely support the understanding of  past societies.
+In this paper, we argue that \emph{formal modelling} and computer simulation are valuable tools to overcome such limitations and (I) we show how evolutionary biologists do so and why it's close to what archaeologist and historian do, (II) we defend how computer modelling is a good heuristic tool in science in general and (III) we introduce an interdisciplinary research setting where the two previous points can be exploited in a meaningful way to investigate the political and economical mechanisms that characterized the dynamics of the commercial trade system during the Roman Empire.
 
 \section{Model and Evolutionary Biology }
-The goal of evolutionary biologists is to understand the mechanisms at the origin of the living world as we can see it today. Assuming the theory of evolution as it was described by Darwin and as it is actually developed, they try to characterise the succession of past events (genetics, biologics, due to specific ecological and environmental contexts) that constitute this history. 
+The goal of evolutionary biologists is to understand the mechanisms at the origin of the living world as we can see it today. Assuming the theory of evolution they try to characterise the succession of past events that constitute this history. 
 
-Starting with Gould (1989), a lot of biologist and philosopher argue that activity of evolutionary biologist is closer to the activity of Historian than Physicist (Ereshefsky, 1992, Beatty, 1995) : 
-the actual biological world does not depend \emph{only} on biological rules, but on the uniqueness of the succession of events.
+Starting with Gould (1989), several biologists and philosophers have argued that their researc activity is closer to the activity of Historian than Physicist (Ereshefsky, 1992, Beatty, 1995) : the actual biological world does not depend \emph{only} on biological rules, but also on the uniqueness of the succession of events.
 
-To encompass the issues raised by such historicity, people studying population genetic, phylogenetic,\ldots use formal models, such as maximum likelihood, Bayesian inference, and other to figure out different possible successions of events and the likelihood of possible historical paths and to test it against the few data available.
+To encompass the issues raised by such historicity, evolutionary biologists use formal models (Maximum Likelihood, Bayesian Inference,\ldots) to figure out different possible successions of events and the likelihood of such possible historical paths and test it against the available data.
 
-This suggest that (i) the problems encountered by evolutionary biologists are similar to those archaeologists and historians have to face (ii) the way inferences are made about the history of living beings fall into a similar epistemological framework that the one used by historians and archaeologists when they rebuild history of human societies and (iii) mathematical and computer models are a way to make some of such inferences explicit in their premises and conditions of application, if not quantifiable: this can offer the possibility to infer, in a statistically plausible and transparent way, data that are missing, in evolutionary biology as well as in human history.
+This suggest that (i) the problems encountered by evolutionary biologists are close to those archaeologists and historians have to face (ii) the way inferences are made about the history of living beings and the history of human societies and (iii) mathematical and computer models offer the possibility to infer, in a statistically plausible and transparent way, missing data and complex hypotheses in both.
 
-
-%As shown by Gould (1989), this kind of understanding is strongly dependent on the contingency of the biological history:  This, and the elements used by evolutionary biologist to study history of biology, put them closer to historian than to phycisist (Ereshefsky, 1992, Beatty, 1995).
-%
-%
-%Among those models, and given the more and more important emphasis put on ecological and individual-to-individual interactions, the artificial environment made of formal models and computer simulation is exploited to palliate the lack of data and the difficulty to recreate the right conditions of evolution in traditional laboratory (Peck 2004\ldots).
-%
-%All this suggest how the problems encountered by evolutionary biologists are extremely similar to those archaeologists and historians have to face. The way inferences are made about the history of living beings seems to fall into epistemological framework that resembles that used by historians and archaeologists when they try to rebuild history of human societies. Mathematical and computer models are a way to make some of those inferences explicit in their premises and conditions of application, if not quantifiable: this can sometimes offer the possibility to infer, in a statistically plausible and transparent way, data that are missing.
 
 \section{Computer Simulation: a heuristic tool}
-But the use of computer simulation and modelling is not restricted to phylogenetic and evolutionary biology. Indeed it is now widely use in all branches of Science. People in Artificial Life (Bedau et al. 1998, 2000, Paolo et al. 2000, \ldots) argued that computer simulation are powerful heuristic tool that combine the exploratory power of thought experiment and the logical strength of mathematic. They allow to test quickly a lot of possible ``opaque though experiment'' that would be impossible to try mentally.
-Moreover, HPC allow us nowadays to statistically try a wide range of parameter of such thought experiment otherwise technically impossible (thought theoretically yes).
+The use of computer simulation and modelling is not restricted evolutionary biology. Indeed it is now widely use in all branches of Science. People in Artificial Life (Bedau et al. 1998, 2000, Paolo et al. 2000, \ldots) argued that computer simulation are powerful heuristic tools that combine the exploratory power of thought experiment and the logical strength of mathematic. They allow to test quickly a lot of possible ``opaque though experiment'' that would be impossible to try mentally.
 
-We thus think that computer model and simulation are one of the best way to study social science and history, as they give  us a heuristic tool to test hypotheses made on very complex systems such as high scale economics activity in past society, where the interactions between every component of the system make the predictability of it very difficult to solve analytically and where those original component at the core of this activity are not anymore accessible.
+We thus think that computer model and simulation are one of the best way to investigate social science and history research questions, as heuristic tool to test hypotheses made on very complex systems such as high scale economics activity in past society. In such system the interactions between every component of the system make the predictability of it very difficult to solve analytically and the heuristic power of computer modelling is one of the only way to explore it.
 
-Moreover, as said by Winsberg (2003) who follows Hacking, Cartwright and other, Computer Simulation gives us a semi-autonomy from theory that allow us to test theory-independent assumption. This epistemological freedom is a mandatory in such fields as economy and history, that hardly fit in traditional view of theories.
 
 \section{Interdisciplinarity and the EPNet project}
-The idea of building a computational model in such a way that it allows us to extract valuable knowledge from it, still remains a difficult task. Computer scientists have to be really careful about every assumption they implicitly made and historians are invited to formulate their hypotheses in new and innovative epistemological framework which still has to be clearly specified and investigated, and whose boundaries stay quite far away from the one they have been used to now. The communication between both side of the research is thus primordial: knowledge in such a challenging journey does not lie in the mathematical models neither in the historical data, but emerges from the well articulation of both side (Winsberg 2009).
+The idea of building computational models that give us valuable knowledge about the modelled object still remains a difficult task. Computer scientists have to be aware off every assumption they could implicitly made and historians have to formulate their hypotheses in an epistemological framework yet not clearly specified and investigated, and far away from the one they have been used to now. The communication between both side of the research is thus primordial: knowledge in such a challenging journey does not lie in the mathematical models neither in the historical data, but emerges from the well articulation of both side (Winsberg 2009).
 
-In this paper, we will provide examples and concrete experiences from the EPNet project, where the emphasis is on providing historians with computational tools to compare, aggregate, measure, geo-localise, and search data about latin and greek inscriptions on amphoras for food transportation.
+In this paper, we examples from the EPNet project, where the emphasis is on providing historians with computational tools for understanding the political and economical implications behind food production and distribution along the Roman Empire.
 
-In particular, the ERC Advanced Grant EPNet 
-%(“Production and distribution of food during the Ro- man Empire: Economics and Political Dynamics”, ERC-2013-ADG 340828), started in March 2014, %%%maybe we can skip it for the bastract?
-aims at setting up an innovative framework to investigate the mechanisms and characteristics of the commercial trade system during the Roman Empire. The main objective of EPNet is to create an interdisciplinary experimental laboratory %(the project team includes specialists from Social Sciences and Humanities and from Physical, and Computer Sciences) %%let's assume that it's include in ``interdisciplinary'' 
-for the exploration, validation and falsification of existing theories, and for the formulation of new ones. This approach is made possible by (i) a large dataset of existing empirical data about Roman amphorae and their associated epigraphy %(Fig.1) if we add that we need to add the figure, but maybe we can skip it also?
-that has been created during the last 2 decades and (ii) the front line theoretical research done by historians on the political and economic aspects of the Roman trade system.
-
-The computational infrastructure of the EPNet project takes the form of a ``Virtual Research Environment'' offering: (i) a conceptual layer (ontology) driving the access to datasets stored into fragmented, heterogeneous and distributed digital repositories; (ii) a platform for sharing of expert knowledge on characterisation, typology and dating of Roman Empire epigraphies/artefacts; (iii) dedicated data visualisations and analytics tools, such as statistical inference and computer-based simulation. By taking into consideration the design and development of such a computational infrastructure, the EPNet epistemological framework we are working with is aiming to address three main problems: (i) structuring and making accessible large collections of data through the Web, (ii) providing a formally defined, unambiguous, framework for analysing the data and exporting them in a way that can be further manipulated by computer simulation algorithms, and complex network analysis, and (iii) making each collection of data integrable with other complementary data sources.
+The computational infrastructure of the EPNet project takes the form of a ``Virtual Research Environment'' offering: (i) a conceptual layer (ontology) driving the access to datasets stored into fragmented, heterogeneous and distributed digital repositories; (ii) a platform for sharing of expert knowledge on characterisation, typology and dating of Roman Empire epigraphies/artefacts; (iii) dedicated data visualisations and analytics tools, such as statistical inference and computer-based simulation. By taking into consideration the design and development of such a computational infrastructure, the EPNet epistemological framework is aiming to address three main problems: (i) structuring and making accessible large collections of data through the Web, (ii) providing a formally defined, unambiguous, framework for analysing the data and exporting them in a way that can be further manipulated by computer simulation algorithms and complex network analysis, and (iii) making each collection of data integrable with other complementary data sources.
 
 
 
 \end{document}
-
 
 
