[BIB] ref to WSC2015

--- a/doc/biblio/bib/SimonCarrignon.bib
+++ b/doc/biblio/bib/SimonCarrignon.bib
@@ -1,3 +1,4 @@
+@comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
 @article{bredeche11evolutionaryadaptationpopulationrobots,
 	author = "Bredeche, Nicolas and Montanier, Jean-Marc and Carrignon, Simon",
@@ -16,35 +17,47 @@
 	title = "{Representations to go: learning robotics, learning by robotics}",
 	year = "2010"
 }
+
 @inproceedings{carrignon2013whyapply,
 	author = "Carrignon, Simon",
-	booktitle = "poster at: 3-Day International Conference on Evolutionary Patterns, Calouste Gulbenkian Foundation, Lisbon, Portugal",
-	title= "Why apply evolutionary theory to melodies",
+	booktitle = "{poster at: 3-Day International Conference on Evolutionary Patterns, Calouste Gulbenkian Foundation, Lisbon, Portugal}",
+	title = "{Why apply evolutionary theory to melodies}",
 	year = "2013"
 }
 
 @inproceedings{medernach2015evolutionary,
-	title={Evolutionary Progress in Heterogenous Cellular Automata (HetCA)},
-	author={Medernach, David and Fitzgerald, Jeannie and Carrignon, Simon and Ryan, Conor},
-	booktitle={Proceedings of the European Conference on Artificial Life 2015},
-	pages={512–519},
-	year={2015},
-	organization={MIT Press}
+	author = "Medernach, David and Fitzgerald, Jeannie and Carrignon, Simon and Ryan, Conor",
+	booktitle = "{Proceedings of the European Conference on Artificial Life 2015}",
+	organization = "MIT Press",
+	pages = "512--519",
+	title = "{Evolutionary Progress in Heterogenous Cellular Automata (HetCA)}",
+	year = "2015"
 }
 
+@article{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments,
+	author = "Zibetti, Elisabetta and Carrignon, Simon and Bredeche, Nicolas",
+	doi = "10.1007/s11299-015-0173-0",
+	issn = "1593-7879",
+	journal = "Mind \& Society",
+	keywords = "Agent-based models; Resource sharing; Environmental pressures; Individual decision making; Global welfare",
+	language = "English",
+	pages = "1--22",
+	publisher = "Springer Berlin Heidelberg",
+	title = "{ACACIA-ES: an agent-based modeling and simulation tool for investigating social behaviors in resource-limited two-dimensional environments}",
+	url = "http://dx.doi.org/10.1007/s11299-015-0173-0",
+	year = 2015
+}
 
-@article{zibetti2015acaciaesanagentbasedmodelingandsimulationtoolforinvestigatingsocialbehaviorsinresourcelimitedtwodimensionalenvironments
-    year={2015},
-    author = "Zibetti, Elisabetta and Carrignon, Simon and Bredeche, Nicolas",
-    doi = "10.1007/s11299-015-0173-0",
-    issn = "1593-7879",
-    journal = "Mind \& Society",
-    keywords = "Agent-based models; Resource sharing; Environmental pressures; Individual decision making; Global welfare",
+@inproceedings{carrignon2015modelingthecoevolutionoftradeandcultureinpastsocieties,
+    author= "Simon Carrignon and Jean-Marc Montanier and Xavier Rubio-Campillo",
+    abstract = "This paper presents a new framework to study the co-evolution of cultural change and trade. The design aims for a trade-off between the flexibility necessary for the implementation of multiple models and the structure necessary for the comparison between the models implemented. To create this framework we propose an Agent-Based Model relying on agents producing, exchanging and associating values to a list of goods. We present the key concepts of the framework and two examples of its implementation which allow us to show the flexibility of our framework. Moreover, we compare the results obtained by the two models, thus validating the structure of the framework. Finally, we validate the implementation of a trading model by studying the price structure it produces.",
+    booktitle = "{2015 Winter Simulation Conference}",
+    title = "{Modeling the Co-evolution of Trade and Culture in Past Societies}",
     language = "English",
-    pages = "1--22",
-    publisher = "Springer Berlin Heidelberg",
-    title = "{ACACIA-ES: an agent-based modeling and simulation tool for investigating social behaviors in resource-limited two-dimensional environments}",
-    url = "http://dx.doi.org/10.1007/s11299-015-0173-0"
+    pages="3949--3960",
+    address = {Huntington Beach, United States},
+    editor = {L. Yilmaz and M.K.V. Chan and I. Moon and T. M. K. Roeder and C. Macal and M. Rossetti},
+    month=Dec,
+    year=2015
 }
-
 
