--- a/doc/administrative_doc/2016SantaFeSummerSchool/20160122_research_interest.tex
+++ b/doc/administrative_doc/2016SantaFeSummerSchool/20160122_research_interest.tex
@@ -27,6 +27,9 @@ I did a first Master Degree in Natural \& Artificial Cognition, in which I wrote
 But there I understood that I would need more than scientific knowledge to deeply understand the link between the process I want to explain and the tools I used to do it. And if I want myself to be able to produced meaningful, useful and concrete research projects I would need a really deep understanding of such a link. That's why I decided to engage myself in another Master Degree in History and Philosophy of Science where I focused on evolutionary processes and their study using computer sciences. It allows me to dig deeper in the philosophical debates that occur throughout the history of evolutionary and to learn the history of the building of the field itself since Darwin.
 
 
+
+Obviously all that was leaded by a lot of reading closely realted and strongly influced by the research done in the santa Fe isntitute. 
+
 This curriculum lead me to focus on trying to understand how systems made of huge number of entities (homogeneous or not), highly decentralized and unsupervised, can evolved powerful adaptive properties such as division of labor, specialization and learning.
 
 I explore such evolution in simulated agents , during the first part of a first but also in simulated robots we obtained funding to look if such dynamics where observable in evolution of musics (Junior Lab LAREMI, ENS Lyon, France)
@@ -36,7 +39,10 @@ I already followed this approach to study human interactions, the evolution of s
 
 My approach to do so is strongly grounded into the theory of evolution and combine computer modelization with complex system analysis: by going back and forth from the analysis of the real world data, the model building activity and the analysis of the data obtain by simulation, I try to understand what are the central mechanisms that lead such complex systems and how they allow them to exhibit interesting properties. 
 
-In parallel to this scientific activity, I develop a deep concern about the epistemological relevance of what I am doing. Computer Simulation and Complex Systems Analysis are powerful tools but they could quickly mislead the research and bring the researcher to nonsense and useless explorations. In that regard I try to always have a strong conceptual and high level understanding of the problem and the methods at sake, as it is the best way to guarantee quick, good and meaningful results. 
+In parallel to this scientific activity, I develop a deep concern about the epistemological relevance of what I am doing. Computer Simulation and Complex Systems Analysis are powerful tools but they could quickly mislead the research and bring the researcher to nonsense and useless explorations. In that regard I try to always have a strong conceptual and high level understanding of the problem and the methods at sake, as it is the best way to guarantee quick, good and meaningful results. Moreover, the questions raised by such approach quickly go behind the simple empiric inquisition and require skills that allow to rethink and redefine all the traditional epistemic baggage into framework far from the ones scientists are use to work in.
+
+
+Nonetheless, in every project I worked I saw how mature start to get such approach and how the understand of decentralized and unsupervised evolving system \emph{per se} was providing knowledge in a wide range of different area of research. It is no more a curious . People using computational tool quantittaive methode and simulation \emph{are} help biologist, sociologist and now, historians. And every time new coop are done, and both side are learnign to understand each other, those interaction are going  to be more and more successful. It's an amaizingly exiting fields.meme si c'est peine perdu si il n'y a pas de departement de gens qui font de strucs bizarre et si les financement se font rare, je continuerait dans cette direction car elle fonctionne et qu'elle est passionnante.  Dans les ann;es suivante mon doctorat j'espere pouvoir approfondir encore l'articulation modelisation/données  et aller en profondeur dans d áutre facette en mettant l'acent sur la necessité d'avoir des donnés.  K'aimerais nottameent learning and development what are their role in such system? how they transform the dynamics.
 
 
 \end{document}
